# Model-of-Heisenberg

./: .gitignore  CMakeLists.txt  README.md  main.cpp  ubuntu_setup_env.sh
src/: components_of_Hamiltonian.h  configuration_of_system.h  main.cpp  model.cpp  spin.h
src/algorithms/: metropolis_algorithm.h
src/lattices/: Base_Lattice.cpp  Base_Lattice.h  Spin.h
src/output/: output_data.h
